feat(ui): add task runtime console and sidebar external links

--- a/savc-ui/public/progress-hub/index.html
+++ b/savc-ui/public/progress-hub/index.html
@@ -18,6 +18,7 @@
         <div class="hub-meta">
           <div class="meta-pill" id="connectionPill">连接中...</div>
           <div class="meta-item">最后更新：<span id="lastUpdated">--</span></div>
+          <a class="ghost-btn" href="./task-runtime.html">任务运行态联调台</a>
           <button class="ghost-btn" id="refreshBtn">立即刷新</button>
         </div>
       </header>
